--- a/css/main.css
+++ b/css/main.css
@@ -61,53 +61,29 @@ a {
 }
 
 .sky {
-  background: url('../img/sky.png') no-repeat center;
+  background: url('../img/pexels-wolfgang-2747446-front.webp') no-repeat center;
   background-size: cover;
   transform: translateZ(-600px) scale(3);
   z-index: 1;
 }
 
-.bushes {
-  background: url('../img/bushes.png') no-repeat center;
-  background-size: cover;
-  transform: translateZ(-525px) scale(2.75);
-  z-index: 2;
-}
-
-.water {
-  background: url('../img/water.png') no-repeat center;
-  background-size: cover;
-  transform: translateZ(-400px) scale(2.33333333);
-  z-index: 3;
-}
-
 .people1 {
-  background: url('../img/people1.png') no-repeat center;
+  background: url('../img/pexels-wolfgang-2747446-crowd.webp') no-repeat center;
   background-size: cover;
   transform: translateZ(-250px) scale(1.833333333);
   z-index: 4;
 }
 
-.people2 {
-  background: url('../img/people2.png') no-repeat center;
-  background-size: cover;
-  transform: translateZ(-125px) scale(1.4167);
-  z-index: 5;
-}
-
-.people3 {
-  background: url('../img/people3.png') no-repeat center;
-  background-size: cover;
-  transform: translateZ(0) scale(1);
-  z-index: 6;
-}
-
-.hero-text {
+.hero-container{
   background: linear-gradient(
-    rgba(105, 211, 252, 0.25) 0%,
-    rgba(255, 116, 161, 0.25) 86%,
-    rgba(1, 0, 0, 0.25) 100%
+    rgba(0, 0, 0, 0.595) 0%,
+    rgba(0, 31, 51, 0.25) 20%,
+    rgba(23, 158, 216, 0.25) 70%,
+    rgba(0, 0, 0, 0.25) 100%
   );
+}
+.hero-text {
+
   background-size: cover;
   transform: translateZ(0) scale(1);
   z-index: 7;
@@ -151,7 +127,7 @@ a {
   font-family: Bebas, sans-serif;
   font-weight: 400;
   position: absolute;
-  font-size: 12.5rem;
+  font-size: 3.5rem;
 }
 
 .year-container h1:nth-of-type(1) {
